# mdformat-gfm-alerts

./: .copier-answers.yml  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
mdformat_gfm_alerts/: __init__.py  plugin.py
mdformat_gfm_alerts/factories/: __init__.py  _factories.py  _gfm_blockquote_factories.py
mdformat_gfm_alerts/mdit_plugins/: __init__.py  _gfm_alert.py  _gfm_alerts.py
tests/: pre-commit-test.md  test_mdformat.py
tests/format/: fixtures.md  test_fixtures.py  test_format.py
tests/format/fixtures/: gfm_alerts.md
tests/render/: test_render.py
tests/render/fixtures/: gfm_alerts.md
