[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2.0,<4"]

[project]
authors = [
  {email = "dev.act.kyle@gmail.com", name = "kyleking"},
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mdformat >= 0.7.16",
  "mdit-py-plugins >= 0.4.0",
]
dynamic = ["description", "version"]
keywords = ["markdown", "markdown-it", "mdformat"]
name = "mdformat_gfm_alerts"
readme = "README.md"
requires-python = ">=3.8.0"

[project.entry-points."mdformat.parser_extension"]
gfm_alerts = "mdformat_gfm_alerts"

[project.optional-dependencies]
dev = ["pre-commit"]
test = [
  "pytest >= 7.4.4",
  "pytest-beartype >= 0.0.2",
  "pytest-cov >= 4.1.0",
]

[project.urls]
homepage = "https://github.com/kyleking/mdformat-gfm-alerts"

[tool.flit.sdist]
exclude = [".github/", "tests/"]
include = []

[tool.pytest-watcher]
ignore_patterns = []
now = true
patterns = ["*.md", "*.py"]
runner = "tox"
runner_args = ["-e", "py38-beartype"]

[tool.tomlsort]
all = true
in_place = true
trailing_comma_inline_array = true
